2017-11-30 Jan Kotanski <jan.kotanski@desy.de>
	* add ROIs
	* add Tango source
	* add Test source
	* add Configuration
	* tagged as 0.X.0

2017-09-19 Christoph Rosemann <christoph.rosemann@desy.de>
	* tagged as 0.5.0