@@ -1,8 +1,9 @@
-2017-11-30 Jan Kotanski <jan.kotanski@desy.de>
-	* add ROIs
+2017-11-XX Jan Kotanski <jan.kotanski@desy.de>
+	* add ROIs and sync with MG
 	* add Tango source
 	* add Test source
 	* add Configuration
+	* fix gradient sync
 	* tagged as 0.X.0
 
 2017-09-19 Christoph Rosemann <christoph.rosemann@desy.de>
